added area attribute

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           надо
         </p>
       </div>
-      <p class="header__rec">REC</p>
+      <p class="header__rec" aria-hidden="true">REC</p>
     </header>
     <main class="content">
       <section class="section section-type-fluid">
