foter text css class renamed

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
       </section>
     </main>
     <footer class="footer">
-      <p class="footer__title">focus</p>
+      <p class="footer__text">focus</p>
     </footer>
     <script src="./scripts/script.js"></script>
   </body>
