--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
     <link rel="stylesheet" href="./fonts/fonts.css" />
 
-    <link rel="stylesheet" href="./styles/variables.css" />
     <link rel="stylesheet" href="./styles/globals.css" />
+    <link rel="stylesheet" href="./styles/variables.css" />
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/dark.css" />
     <link rel="stylesheet" href="./styles/light.css" />
@@ -247,8 +247,8 @@
         </div>
       </section>
     </main>
-    <footer class="footer">
-      <p class="footer__text">focus</p>
+    <footer class="footer decorated-zone">
+      <h2 class="footer__text">focus</h2>
     </footer>
     <script src="./scripts/script.js"></script>
   </body>
